<resources>
    <string name="app_name">GPA_priem_Calculator</string>
    <string name="Compute_GPA">Compute GPA</string>
    <string name="Input_Grade_2">Input Grade 2:</string>
    <string name="Input_Grade_3">Input Grade 3:</string>
    <string name="GPA_Calculator">GPA Calculator</string>
    <string name="Input_Grade_1">Input Grade 1:</string>
    <string name="Input_Grade_5">Input Grade 5:</string>
    <string name="Input_Grade_4">Input Grade 4:</string>
</resources>